--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pricing Plan</title>
     <style>
+      @font-face {
+        font-family: "Mistrully";
+        src: url(" https://itishstudios.net/assert/font/Mistrully.ttf");
+        font-weight: normal; /* Adjust font-weight if needed */
+        font-style: normal; /* Adjust font-style if needed */
+      }
+      .title {
+        font-family: "Mistrully", sans-serif;
+      }
+
+      .longTermQuest {
+        background: #8cf9bdcc;
+        display: inline-flex;
+      }
+      .qtext {
+        padding-left: 5rem;
+      }
+      .qtext .title,
+      .qtext p {
+        font-weight: 550;
+      }
       .container {
         margin-top: 1.3rem;
         display: flex;
@@ -90,10 +111,38 @@
         .plan1 {
           margin-bottom: 3rem;
         }
+        .qtext {
+          padding-left: 0;
+        }
       }
     </style>
   </head>
   <body>
+    <center><h2 class="longTermQuest">Long Term Questions</h2></center>
+    <div class="qtext">
+      <div class="title">On the list</div>
+      <p>Focused on getting started and making content a habit</p>
+      <p>[Put The TOP 4-5 Features bullet point]</p>
+    </div>
+    <br />
+    <div class="qtext">
+      <div class="title">The A list</div>
+      <p>Focused on growth for your content</p>
+      <p>[Put The TOP 4-5 Features bullet point]</p>
+    </div>
+
+    <br />
+    <div class="qtext">
+      <div class="title">The Ryan hosling</div>
+      <p>Your media company in a box</p>
+      <p>[Put The TOP 4-5 Features bullet point]</p>
+    </div>
+    <br />
+    <br />
+    <div class="qtext">
+      <p>[EXAMPLE Below]</p>
+    </div>
+
     <div class="container">
       <div class="plan1">
         <div class="price">
