--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
     </style>
   </head>
   <body>
-    <center><h2 class="longTermQuest">Long Term Questions</h2></center>
-    <div class="qtext">
+    <!-- <center><h2 class="longTermQuest">Long Term Questions</h2></center> -->
+    <!-- <div class="qtext">
       <div class="title">On the list</div>
       <p>Focused on getting started and making content a habit</p>
       <p>[Put The TOP 4-5 Features bullet point]</p>
@@ -166,7 +166,7 @@
     <br />
     <div class="qtext">
       <p>[EXAMPLE Below]</p>
-    </div>
+    </div> -->
 
     <div class="container">
       <div class="plan1">
