--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         padding: 0;
       }
       .price .money {
-        font-size: 41px;
+        font-size: 33px;
         font-weight: bolder;
       }
       .currency {
@@ -120,6 +120,9 @@
         .container {
           /* flex-wrap: wrap; */
           flex-direction: column;
+          margin-left: 1rem;
+          /* padding-right: 0rem; */
+          margin-right: -1rem;
         }
         .plan1 {
           margin-bottom: 3rem;
